# Trading_Journal

./: Procfile  pyproject.toml
Trading_Journal/: wsgi.py
Trading_Journal/Trading_Journal/: settings.py
